<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_more"
        android:title=""
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_more_vert_black_24dp">

        <menu>

            <item
                app:showAsAction="ifRoom"
                android:id="@+id/menu_item_profile"
                android:icon="@drawable/ic_account_circle_white_24dp"
                android:orderInCategory="100"
                android:title="@string/account"/>

            <item
                app:showAsAction="ifRoom"
                android:id="@+id/menu_item_help"
                android:icon="@drawable/ic_help_outline_white_24dp"
                android:orderInCategory="100"
                android:title="@string/help"/>

            <item android:id="@+id/menu_item_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_power_off_white_24dp"
                app:showAsAction="ifRoom"
                android:orderInCategory="200"/>

        </menu>

    </item>

</menu>