<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:layout_height="wrap_content"
    android:layout_margin="32dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text=""
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/md_grey_800"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:text=""
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/md_grey_800"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/txtNewPasswordAgain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_again"
            android:text=""
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/md_grey_800"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/update_password"
        android:textAllCaps="false"
        android:textColor="@color/md_white_1000"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:text="@string/cancel"
        android:textColor="@color/md_grey_800"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>
</LinearLayout>