<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/rootLayout"
    tools:context=".activities.LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_centerVertical="true"
        android:id="@+id/layoutContent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:text=""
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:textColor="@color/md_grey_800"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/md_grey_800"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingTop="5dp"
            android:layout_marginRight="40dp"
            android:textSize="14sp"
            android:text="@string/forgot_password"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/md_white_1000"
            android:text="@string/help"
            android:textColor="@color/md_grey_800"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:visibility="invisible"/>
    </LinearLayout>

</RelativeLayout>

