<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:id="@+id/parentLayout"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/outline_bottom"
            android:id="@+id/layoutLocation"
            android:visibility="gone">

            <FrameLayout
                android:id="@+id/fragment_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <!--<ImageView-->
                <!--android:layout_width="32dp"-->
                <!--android:layout_height="32dp"-->
                <!--android:src="@drawable/ic_location_searching_black_24dp"-->
                <!--android:id="@+id/ivMaps"-->
                <!--android:layout_marginRight="8dp"-->
                <!--android:layout_marginBottom="8dp"/>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/outline_bottom"
            android:gravity="center_vertical">

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_location_searching_black_24dp"
                android:id="@+id/ivMaps"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:maxLines="10"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:textColor="@drawable/editext_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <EditText
                android:id="@+id/txtDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/district"
                android:inputType="text"
                android:textColor="@drawable/editext_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <EditText
                android:id="@+id/txtLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/latitude"
                android:inputType="text"
                android:textColor="@drawable/editext_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <EditText
                android:id="@+id/txtLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/longitude"
                android:inputType="text"
                android:textColor="@drawable/editext_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/station_name"
                android:inputType="text"
                android:textColor="@drawable/editext_selector"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <EditText
                android:id="@+id/txtZoneCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/zone_code"
                android:inputType="text"
                android:textColor="@drawable/editext_selector"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>

