<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activities.InsertAssignmentActivity"
    android:id="@+id/parentLayout"
    android:background="@color/md_white_1000">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <ProgressBar
            android:id="@+id/spin_progress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@drawable/spinner_background"
            android:orientation="horizontal"
            android:id="@+id/layoutSpin"
            android:layout_gravity="center">

            <Spinner
                android:id="@+id/spin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown"
                android:layout_centerVertical="true" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_spinner" />

        </RelativeLayout>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_station"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                />

        </android.support.v4.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/main_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <include layout="@layout/error_layout"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_data"
            android:id="@+id/tvNoData"
            android:visibility="gone"/>

    </FrameLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/md_white_1000"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

</LinearLayout>


